--- a/CRMProject/appsettings.json
+++ b/CRMProject/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "this is my custom Secret key for authentication Ankit jhjshdjhd sjdhsjhds "
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
